fix: vertical alignment in header

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -10,6 +10,7 @@
   $blur: 20px;
   backdrop-filter: blur($blur);
   -webkit-backdrop-filter: blur($blur);
+  line-height: 1em;
 }
 
 .container {
